--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,6 +6,12 @@
 	<title>Upload</title>
 </head>
 
+<style>
+head {text-align: center;}
+h1 {text-align: center;}
+div {text-align: center;}
+</style>	
+	
 <body>
 	<h1>Upload your image(s) and select a style</h1>
 	<form id="upload-form" action="{{url_for('upload')}}" method= "POST" enctype="multipart/form-data">
