--- a/templates/upload.html
+++ b/templates/upload.html
@@ -20,7 +20,8 @@ div {text-align: center;}
 		<input type="submit" value="Upload">
 		<br><br>
 
-		<div>
+		<div style="background-image: url('https://assets-global.website-files.com/5d7b77b063a9066d83e1209c/613ebc713d78bd6d64e763b8_IJBbdBDp67rtR1bfd0GVlcu5kQIIOX5ExT3I8w7f7UGV90_-SwP-lOfF61k6Npq_4SqPiXnQnVgRXwFmNe8c0OctDfb0p_ScrJGWNkgu7S1UKZmk_BsYb-_C11OGXciC8IjqMfO2%3Ds0.png';
+			    background-size: cover; height:480px; padding-top: 80px; text-align: center;">
 			<label for="style">Choose an image style:</label>
 			<select id="style" name="style">
 				<!-- Torch pretrained models from https://github.com/ProGamerGov/Torch-Models-->
