--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,14 +7,14 @@
 </head>
 
 <style>
+body {background-image: url('https://assets-global.website-files.com/5d7b77b063a9066d83e1209c/613ebc713d78bd6d64e763b8_IJBbdBDp67rtR1bfd0GVlcu5kQIIOX5ExT3I8w7f7UGV90_-SwP-lOfF61k6Npq_4SqPiXnQnVgRXwFmNe8c0OctDfb0p_ScrJGWNkgu7S1UKZmk_BsYb-_C11OGXciC8IjqMfO2%3Ds0.png');}
 head {text-align: center;}
 form {text-align: center;}
 h1 {text-align: center;}
 div {text-align: center;}
 </style>	
 	
-<body style="background-image: url('https://assets-global.website-files.com/5d7b77b063a9066d83e1209c/613ebc713d78bd6d64e763b8_IJBbdBDp67rtR1bfd0GVlcu5kQIIOX5ExT3I8w7f7UGV90_-SwP-lOfF61k6Npq_4SqPiXnQnVgRXwFmNe8c0OctDfb0p_ScrJGWNkgu7S1UKZmk_BsYb-_C11OGXciC8IjqMfO2%3Ds0.png';
-			    background-size: cover; height:480px; padding-top: 80px; text-align: center;">
+<body>
 	<h1>Upload your favorite image(s) and select a style you would like to use</h1>
 	<form id="upload-form" action="{{url_for('upload')}}" method= "POST" enctype="multipart/form-data">
 		<input type="file" name="file" accept="image/*" multiple>
