--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,13 +7,19 @@
 </head>
 
 <style>
-body {background-image: url('https://assets-global.website-files.com/5d7b77b063a9066d83e1209c/613ebc713d78bd6d64e763b8_IJBbdBDp67rtR1bfd0GVlcu5kQIIOX5ExT3I8w7f7UGV90_-SwP-lOfF61k6Npq_4SqPiXnQnVgRXwFmNe8c0OctDfb0p_ScrJGWNkgu7S1UKZmk_BsYb-_C11OGXciC8IjqMfO2%3Ds0.png');}
 head {text-align: center;}
 form {text-align: center;}
 h1 {text-align: center;}
 div {text-align: center;}
 </style>	
-	
+
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://assets-global.website-files.com/5d7b77b063a9066d83e1209c/613ebc713d78bd6d64e763b8_IJBbdBDp67rtR1bfd0GVlcu5kQIIOX5ExT3I8w7f7UGV90_-SwP-lOfF61k6Npq_4SqPiXnQnVgRXwFmNe8c0OctDfb0p_ScrJGWNkgu7S1UKZmk_BsYb-_C11OGXciC8IjqMfO2%3Ds0.png" alt="" width="468" height="264" /></p>
+
+<table style="border-collapse: collapse; width: 100%; height: 61px;" border="1">
+<tbody>
+<tr style="height: 61px;">
+<td style="width: 100%; height: 61px;">&nbsp;</td>
+
 <body style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em; background-color:white;">
 	<h1>Upload your favorite image(s) and select a style you would like to use</h1>
 	<form id="upload-form" action="{{url_for('upload')}}" method= "POST" enctype="multipart/form-data">
@@ -40,4 +46,9 @@ div {text-align: center;}
 	  		</select>
 		</div>
 </body>
+
+</tr>
+</tbody>
+</table>
+
 </html>
