--- a/templates/upload.html
+++ b/templates/upload.html
@@ -14,7 +14,7 @@ h1 {text-align: center;}
 div {text-align: center;}
 </style>	
 	
-<body style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em; background-color:white;">
+<body style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em; background-color:white;text-align: center;">
 	<h1>Upload your favorite image(s) and select a style you would like to use</h1>
 	<form id="upload-form" action="{{url_for('upload')}}" method= "POST" enctype="multipart/form-data">
 		<input type="file" name="file" accept="image/*" multiple>
