--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Upload</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Try neural style transfer with an image of yours</title>
+    </head>
+    <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://assets-global.website-files.com/5d7b77b063a9066d83e1209c/613ebc713d78bd6d64e763b8_IJBbdBDp67rtR1bfd0GVlcu5kQIIOX5ExT3I8w7f7UGV90_-SwP-lOfF61k6Npq_4SqPiXnQnVgRXwFmNe8c0OctDfb0p_ScrJGWNkgu7S1UKZmk_BsYb-_C11OGXciC8IjqMfO2%3Ds0.png" alt="Mona Lisa's image with different Neural Style Transfer Models" width="468" height="264" /></p>
 
-	
+    <table style="border-collapse: collapse; width: 100%; height: 61px;" border="1">
+    <tbody>
+    <tr style="height: 61px;">
+    <td style="width: 100%; height: 61px;">&nbsp;</td>
 
-<p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://assets-global.website-files.com/5d7b77b063a9066d83e1209c/613ebc713d78bd6d64e763b8_IJBbdBDp67rtR1bfd0GVlcu5kQIIOX5ExT3I8w7f7UGV90_-SwP-lOfF61k6Npq_4SqPiXnQnVgRXwFmNe8c0OctDfb0p_ScrJGWNkgu7S1UKZmk_BsYb-_C11OGXciC8IjqMfO2%3Ds0.png" alt="" width="468" height="264" /></p>
+    <body style="border:3px; border-style:solid; border-color:#000000; padding: 1em; background-color:white;text-align: center;">
+        
+    <style>
+    head {text-align: center;}
+    form {text-align: center;}
+    h1 {text-align: center;}
+    div {text-align: center;}
+    </style>
+        
+        
 
-<table style="border-collapse: collapse; width: 100%; height: 61px;" border="1">
-<tbody>
-<tr style="height: 61px;">
-<td style="width: 100%; height: 61px;">&nbsp;</td>
+        <h1>Upload your favorite image(s) and select a style you would like to use</h1>
+        <form id="upload-form" action="{{url_for('upload')}}" method= "POST" enctype="multipart/form-data">
+            <input type="file" name="file" accept="image/*" multiple>
+            <input type="submit" value="Upload">
+            <br><br>
 
-<body style="border:3px; border-style:solid; border-color:#000000; padding: 1em; background-color:white;text-align: center;">
-	
-<style>
-head {text-align: center;}
-form {text-align: center;}
-h1 {text-align: center;}
-div {text-align: center;}
-</style>
-	
-	
+            <div>
+                <label for="style">Choose an image style:</label>
+                <select id="style" name="style">
+                    <!-- Torch pretrained models from https://github.com/ProGamerGov/Torch-Models-->
+                    <!-- And also "https://cs.stanford.edu/people/jcjohns/fast-neural-style/models//instance_norm/candy.t7"-->
+                    <option value="Fire_Style_22000_Iterations.t7">Fire Style</option>
+                    <option value="gold_black_2700.t7">Gold Black Style</option>
+                    <option value="pink_style_1800.t7">Pink Style</option>
+                    <option value="triangle_style_1000.t7">Triangle Style</option>
+                    <option value="flame_style_4500.t7">Flame Style</option>
+                    <option value="landscape_style_11600.t7">Landscape Style</option>
+                    <option value="rain_style_iter_4000.t7">Rain Style</option>
+                    <option value="starry_night_2500.t7">Starry Night Style</option>
+                    <option value="mosaic.t7">Mosaic Style</option>
+                    <option value="the_scream.t7">The Scream Style</option>
+                    <option value="the_wave.t7">The Wave Style</option>
+                </select>
+            </div>
+    </body>
 
-	<h1>Upload your favorite image(s) and select a style you would like to use</h1>
-	<form id="upload-form" action="{{url_for('upload')}}" method= "POST" enctype="multipart/form-data">
-		<input type="file" name="file" accept="image/*" multiple>
-		<input type="submit" value="Upload">
-		<br><br>
-
-		<div>
-			<label for="style">Choose an image style:</label>
-			<select id="style" name="style">
-				<!-- Torch pretrained models from https://github.com/ProGamerGov/Torch-Models-->
-				<!-- And also "https://cs.stanford.edu/people/jcjohns/fast-neural-style/models//instance_norm/candy.t7"-->
-				<option value="Fire_Style_22000_Iterations.t7">Fire Style</option>
-				<option value="gold_black_2700.t7">Gold Black Style</option>
-				<option value="pink_style_1800.t7">Pink Style</option>
-				<option value="triangle_style_1000.t7">Triangle Style</option>
-				<option value="flame_style_4500.t7">Flame Style</option>
-				<option value="landscape_style_11600.t7">Landscape Style</option>
-				<option value="rain_style_iter_4000.t7">Rain Style</option>
-				<option value="starry_night_2500.t7">Starry Night Style</option>
-				<option value="mosaic.t7">Mosaic Style</option>
-				<option value="the_scream.t7">The Scream Style</option>
-				<option value="the_wave.t7">The Wave Style</option>
-	  		</select>
-		</div>
-</body>
-
-</tr>
-</tbody>
-</table>
+    </tr>
+    </tbody>
+    </table>
 
 </html>
